Now you can choose address and payment method from already existing

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -3,13 +3,14 @@ html {
 }
 .product-container
 {
-    border: 1px solid #ccc;
+    border: 1px solid #cd3118;
     padding: 5px;
-    width: 900px;
-    height: 900px;
+    width: auto;
+    height: auto;
     margin: 10px ;
     display: inline-block;
     text-align:center;
+    position: center;
 
 }
 .product-image {
@@ -108,6 +109,7 @@ html {
     display: inline-block
 }
 
+
 .price {
     color: grey;
     font-size: 22px;
@@ -130,5 +132,7 @@ html {
 }
 .center-body{
     width: 70%;
-    margin: 0 auto;
+    margin: auto;
+    align-content: center;
+
 }
