Profile page is on now!

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -108,7 +108,15 @@ html {
     background-color: chocolate;
     display: inline-block
 }
-
+.info-card {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    max-width: 300px;
+    margin: 30px;
+    text-align: center;
+    font-family: arial, serif;
+    background-color: chocolate;
+    display : flow;
+}
 
 .price {
     color: grey;
@@ -131,8 +139,58 @@ html {
     opacity: 0.7;
 }
 .center-body{
-    width: 70%;
+    width: 75%;
     margin: auto;
     align-content: center;
 
+}
+.getButton {
+    box-shadow:inset 0px 1px 0px 0px #f7c5c0;
+    background:linear-gradient(to bottom, #fc8d83 5%, #e4685d 100%);
+    background-color:#fc8d83;
+    border-radius:6px;
+    border:1px solid #d83526;
+    display:inline-block;
+    cursor:pointer;
+    color:#ffffff;
+    font-family:Arial;
+    font-size:15px;
+    font-weight:bold;
+    padding:6px 24px;
+    text-decoration:none;
+    text-shadow:0px 1px 0px #b23e35;
+}
+.getButton:hover {
+    background:linear-gradient(to bottom, #e4685d 5%, #fc8d83 100%);
+    background-color:#e4685d;
+}
+.getButton:active {
+    position:relative;
+    top:1px;
+}
+.main-block {
+    width: 1000px;
+    height: auto;
+    position: relative;
+}
+.left-block{
+    width: 500px;
+    margin: auto;
+    display: inline-block;
+}
+
+.right-block{
+    width: 500px;
+    margin: auto;
+    display: inline-block;
+}
+
+.order-card {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    max-width: 300px;
+    margin: 30px;
+    text-align: center;
+    font-family: arial, serif;
+    background-color: chocolate;
+    display : inline-block;
 }
