--- a/src/main/resources/templates/extra-selection.html
+++ b/src/main/resources/templates/extra-selection.html
@@ -37,7 +37,7 @@
                     </label><Br>
             </th:block>
                 <p>
-                    <button>Add to Cart</button>
+                    <button class="getButton">Add to Cart</button>
                 </p>
             </form>
 
