--- a/src/main/resources/templates/address-input.html
+++ b/src/main/resources/templates/address-input.html
@@ -30,14 +30,15 @@
         <br style="clear:left"/>
     </div>
 <div class="form-body">
-   <div  th:if="${user.getAddresses() !=null}"  th:each="address : ${user.getAddresses()}">
-       <td th:text="${address.street}"></td>
-       <td th:text="${address.apartmentNumber}"></td>
-       <td th:text="${address.houseNumber}"></td>
+    <b>Select existing Address</b>
+   <div  class="order-card" th:if="${user.getAddresses() !=null}"  th:each="address : ${user.getAddresses()}">
+       <h1 th:text="${address.street + '  Street'}"></h1>
+       <td th:text="${address.apartmentNumber + '  apt. number'}"></td>
+       <td th:text="${address.houseNumber + '  House number'}"></td>
        <form action="/address-input" method="POST">
            <input type="hidden" name="addressId" th:value="${address.id}"/>
            <p>
-               <button>Select This address</button>
+               <button class="getButton">Select This address</button>
            </p>
        </form>
    </div>
@@ -61,7 +62,7 @@
         <input type="text" th:field="*{phoneNumber}" id="phoneNumber" class="form-input">
 
 
-        <input class="button" type="submit" value="Continue to Payment">
+        <input  class="getButton" type="submit" value="Continue to Payment">
     </form>
 </div>
 </body>
