--- a/src/main/resources/templates/drink-selection.html
+++ b/src/main/resources/templates/drink-selection.html
@@ -14,14 +14,14 @@
     <div class="menu">
         <ul>
             <li><a href="/main">Home</a></li>
-            <li><a href="/registration">Registration</a></li>
+            <li><a  sec:authorize="isAnonymous()" href="/registration">Registration</a></li>
             <li><a href="/drink-selection">Our Drinks!</a></li>
             <li><a href="/pizzas">Our HOT Pizzas!</a></li>
             <li><a href="/shoppingCart">Shopping cart</a> </li>
             <li><a sec:authorize="hasRole('ADMIN')" href="/admin"> Admin page</a> </li>
             <li><a sec:authorize="isAnonymous()" href="/login"> Login to your account </a> </li>
             <li><form method="post" th:action="@{/logout}">
-                <button sec:authorize="isFullyAuthenticated()" class="logout-button" type="submit"> LOGOUT</button>
+                <button  th:class="getButton" sec:authorize="isFullyAuthenticated()" class="logout-button" type="submit"> LOGOUT</button>
             </form></li>
 
 
