--- a/src/main/resources/templates/shoppingCart.html
+++ b/src/main/resources/templates/shoppingCart.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"   xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
 
 <link href="../static/css/style.css" th:href="@{css/style.css}" rel="stylesheet" type="text/css">
 <head>
@@ -15,12 +16,14 @@
         <li><a href="/registration">Registration</a></li>
         <li><a href="/drink-selection">Our Drinks!</a></li>
         <li><a href="/pizzas">Our HOT Pizzas!</a></li>
-        <li><a href="/shoppingCart">Shopping cart!</a> </li>
-        <li><a sec:authorize="hasRole('ADMIN')" href="/admin/user-list"> Admin page</a> </li>
-        <li><a sec:authorize="isAnonymous()" href="/login"> Login to your account </a> </li>
-        <li><form method="post" th:action="@{/logout}">
-            <button sec:authorize="isFullyAuthenticated()" class="logout-button" type="submit"> LOGOUT</button>
-        </form></li>
+        <li><a href="/shoppingCart">Shopping cart!</a></li>
+        <li><a sec:authorize="hasRole('ADMIN')" href="/admin/user-list"> Admin page</a></li>
+        <li><a sec:authorize="isAnonymous()" href="/login"> Login to your account </a></li>
+        <li>
+            <form method="post" th:action="@{/logout}">
+                <button sec:authorize="isFullyAuthenticated()" class="logout-button" type="submit"> LOGOUT</button>
+            </form>
+        </li>
     </ul>
     <br style="clear:left"/>
 </div>
@@ -31,9 +34,11 @@
     <tr>
         <td>Name</td>
         <td>Price</td>
-        <td>LOOK AT DIS</td>
+        <td>  </td>
+        <td> Extras </td>
+           <td>Remove</td>
         <td>AMOUNT</td>
-        <td>Remove</td>
+
     </tr>
     </thead>
     <tbody>
@@ -41,17 +46,18 @@
         <td th:text="${food.key.name}"></td>
         <td th:text="${food.key.price + ' $ '}"></td>
         <td><img class="product-image" th:src="${food.key.pictureLink}"> </td>
-        <td><form th:action="@{'/removeProduct' + ${food.key.id}}" method="post"> <button> Remove</button></form> </td>
+        <td><form th:action="@{'/removeProduct' + ${food.key.id}}" method="post"> <button
+                class="getButton"> Remove</button></form> </td>
         <td th:text="${food.getValue()}"> </td>
     </tr>
 
     </tbody>
 </table>
         <li><a href="/address-input">CheckOut</a></li>
-         <p   align="center" th:text="${'Total   ' + sessionCart.getTotalPrice() + ' $'}">  </p>
+         <p align="center" th:text="${'Total   ' + sessionCart.getTotalPrice() + ' $'}">  </p>
     </span>
     <span th:if="${sessionCart.getUserCart().isEmpty()}">
-        <li>YOUR SHOPPING CART IS EMPTY!</li>
+        <h1 th:align="center">YOUR SHOPPING CART IS EMPTY!</h1>
     </span>
 
 </th:block>
