--- a/src/main/resources/templates/drink-list.html
+++ b/src/main/resources/templates/drink-list.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"   xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
 
 <link href="../static/css/style.css" th:href="@{css/style.css}" rel="stylesheet" type="text/css">
 <head>
@@ -14,11 +15,13 @@
         <li><a href="/registration">Registration</a></li>
         <li><a href="/drink-selection">Our Drinks!</a></li>
         <li><a href="/pizzas">Our HOT Pizzas!</a></li>
-        <li><a sec:authorize="hasRole('ADMIN')" href="/admin/user-list"> Admin page</a> </li>
-        <li><a sec:authorize="isAnonymous()" href="/login"> Login to your account </a> </li>
-        <li><form method="post" th:action="@{/logout}">
-            <button sec:authorize="isFullyAuthenticated()" class="logout-button" type="submit"> LOGOUT</button>
-        </form></li>
+        <li><a sec:authorize="hasRole('ADMIN')" href="/admin/user-list"> Admin page</a></li>
+        <li><a sec:authorize="isAnonymous()" href="/login"> Login to your account </a></li>
+        <li>
+            <form method="post" th:action="@{/logout}">
+                <button sec:authorize="isFullyAuthenticated()" class="logout-button" type="submit"> LOGOUT</button>
+            </form>
+        </li>
     </ul>
     <br style="clear:left"/>
 </div>
@@ -30,7 +33,7 @@
         <th>Name</th>
         <th>Price</th>
         <th>Size</th>
-        <td>Picture </td>
+        <td>Picture</td>
         <th>Description</th>
         <th>Delete</th>
         <th>EDIT</th>
@@ -42,7 +45,7 @@
         <td th:text="${drink.name}"></td>
         <td th:text="${drink.price}"></td>
         <td th:text="${drink.size}"></td>
-        <td class="product-image"  img th:src="${drink.pictureLink}"></td>
+        <td class="product-image" img th:src="${drink.pictureLink}"></td>
         <td th:text="${drink.description}"></td>
         <td><a th:href="@{deleteDrinkById/{id}(id=${drink.id})}">Delete</a></td>
         <td><a th:href="@{updateDrinkById/{id}(id=${drink.id})}">Edit</a></td>
@@ -50,5 +53,6 @@
     </tbody>
 </table>
 </div>
+<a href="/admin/add-drink">Add Drink </a>
 </body>
 </html>
