--- a/src/main/resources/templates/drink-selection.html
+++ b/src/main/resources/templates/drink-selection.html
@@ -32,13 +32,11 @@
         <div class="card">
             <img class="product-image" th:src="${drink.pictureLink}" alt="picture of pizza must be here">
             <h1 th:text="${drink.name}"></h1>
-            <p class="price" th:text="${drink.price}  + '$' ">  </p>
+            <p th:text="${drink.size + 'L'}"></p>
+            <p class="price" th:text="${#numbers.formatDecimal(drink.price,1,2)}  + '$' ">  </p>
             <p th:text=" ${drink.description}"> </p>
             <form action="/buyDrink" method="POST">
                 <input type="hidden" name="id" th:value="${drink.id}"/>
-                <label>
-                    <input type="text" name="quantity">
-                </label>
                 <p>
                     <button>Add to Cart</button>
                 </p>
