--- a/src/main/resources/templates/extra-selection.html
+++ b/src/main/resources/templates/extra-selection.html
@@ -37,7 +37,10 @@
                     </label><Br>
             </th:block>
                 <p>
-                    <button class="getButton">Add to Cart</button>
+                    <button class="getButton">Add Products to Pizza</button>
+                </p>
+                <p>
+                    <button class="getButton">Pass, Just a Pizza please :)</button>
                 </p>
             </form>
 
