--- a/src/main/resources/templates/drink-list.html
+++ b/src/main/resources/templates/drink-list.html
@@ -3,10 +3,10 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
 
-<link href="../static/css/style.css" th:href="@{css/style.css}" rel="stylesheet" type="text/css">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link th:href="@{../css/style.css}" rel="stylesheet" type="text/css">
 </head>
 <body>
 <div class="menu">
