DB updates, fully working my profile page with all options

--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
 
-<link href="../static/css/style.css" th:href="@{css/style.css}" rel="stylesheet" type="text/css">
+<link th:href="@{../css/style.css}" rel="stylesheet" type="text/css">
 <head>
     <meta charset="UTF-8">
     <title>ADMIN PAGE</title>
@@ -39,7 +39,7 @@
         <th><p><a href="/admin/pizza-list">View/Edit Pizzas </a></p></th>
         <th><p><a href="/admin/user-list">View/Edit Users </a></p></th>
         <th><p><a href="/admin/drink-list">View/Edit Users </a></p></th>
-        <th><p><a href="/admin/daily-report">View/Edit Users </a></p></th>
+        <th><p><a href="/admin/order-list">View/Edit Users </a></p></th>
 
     </thead>
 </table>
