--- a/src/main/resources/templates/pizza-list.html
+++ b/src/main/resources/templates/pizza-list.html
@@ -1,7 +1,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
 
-<link href="../static/css/style.css" th:href="@{css/style.css}" rel="stylesheet" type="text/css">
+<link th:href="@{../css/style.css}" rel="stylesheet" type="text/css">
 
 <head>
     <meta charset="UTF-8">
