--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -32,11 +32,13 @@
     <thead>
     <tr>
         <th> List of Pizzas</th>
+        <th> List of Products</th>
         <th> List of Users</th>
         <th> List of Drinks</th>
         <th> Daily Report</th>
     <tr>
         <th><p><a href="/admin/pizza-list">View/Edit Pizzas </a></p></th>
+        <th><p><a href="/admin/product-list">View/Edit Products </a></p></th>
         <th><p><a href="/admin/user-list">View/Edit Users </a></p></th>
         <th><p><a href="/admin/drink-list">View/Edit Users </a></p></th>
         <th><p><a href="/admin/order-list">View/Edit Users </a></p></th>
