i forgot what ive made today but some final changes, only validation problem left

--- a/src/main/resources/templates/order-list.html
+++ b/src/main/resources/templates/order-list.html
@@ -10,7 +10,7 @@
 </head>
 <body class="center-body">
 
-<img class="top-image"  th:src="@{images/pizzahot.png}"/>
+<img class="top-image"  th:src="@{https://i.imgur.com/wlqbBqu.png}"/>
 <div class="menu">
     <ul>
         <li><a href="/main">Home</a></li>
