--- a/src/main/resources/templates/show-user-info.html
+++ b/src/main/resources/templates/show-user-info.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
-<link th:href="@{../css/style.css}" rel="stylesheet" type="text/css">
+<link th:href="@{/css/style.css}" rel="stylesheet" type="text/css">
 <head>
     <meta charset="UTF-8">
     <title>User Information</title>
 </head>
 <body class="center-body">
 
-<img class="top-image" src="../static/images/pizzahot.png" th:src="@{images/pizzahot.png}"/>
+<img class="top-image"  th:src="@{images/pizzahot.png}"/>
 <div class="menu">
     <ul>
         <li><a href="/main">Home</a></li>
@@ -37,8 +37,8 @@
         <a th:text="${payment.ccExpiration}"></a>
         <a th:text="${payment.ccCVV}"></a>
         <a th:text="${payment.street}"></a>
-        <form action="/deletePaymentById" method="POST">
-            <input type="hidden" name="id" th:value="${payment.id}"/>
+        <form action="/admin/removePaymentById" method="POST">
+            <input type="hidden" name="paymentId" th:value="${payment.id}"/>
             <button class="getButton"> Remove Credit Card</button>
         </form>
     </div>
@@ -46,24 +46,32 @@
 <div class="right-block">
     <h1>Addresses</h1>
     <div class="info-card" th:each="address: ${user.getAddresses()}">
-        <a th:text="${address.getZip()}"></a>
+        <a th:text="${address.zip}"></a>
         <a th:text="${address.street}"></a>
         <a th:text="${address.houseNumber}"></a>
         <a th:text="${address.apartmentNumber}"></a>
-        <form action="/deleteAddressById" method="POST">
+        <form action="/admin/removeAddressById" method="POST">
             <input type="hidden" name="addressId" th:value="${address.id}"/>
             <button class="getButton"> Remove Address</button>
         </form>
     </div>
 </div>
-<div class="left-block">
+
     <h1> Orders</h1>
-    <div class="order-card" th:each="order: ${user.getOrders()}">
+    <div class="info-card" th:each="order: ${user.orders}">
         <p>Order Date</p>
-        <a th:text="${order.getDate()}"></a>
+        <a th:text="${order.date}"></a>
         <p> Order Total $</p>
-        <a th:text="${order.getTotal()}"></a>
+        <a th:text="${order.total}"></a>
+        <p>Menu</p>
+        <a th:each="cartItem : ${order.cartItems}"></a>
+        <a th:text="${cartItem?.modifiedPizza?.name}"></a>
+        <a th:text="${cartItem?.modifiedPizza?.description}"></a>
+        <a th:text="${cartItem?.drink?.name}"></a>
+        <p>Quantity :</p>
+        <a th:text="${cartItem?.pizzaQuantity}"> </a>
+        <a th:text="${cartItem?.drinkQuantity}"></a>
     </div>
-</div>
+
 </body>
 </html>
