--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -36,7 +36,7 @@
         <input type="text" th:field="*{username}" id="username" class="form-input">
         <p th:if="${#fields.hasErrors('username')}" th:errors="*{username}">Such username already exists!</p>
         <label for="password">Password</label>
-        <input type="text" th:field="*{password}" id="password" class="form-input">
+        <input type="password" th:field="*{password}" id="password" class="form-input">
         <p th:if="${#fields.hasErrors('password')}" th:errors="*{password}">Password must be between {min} and {max}</p>
         <label for="firstName">First name</label>
         <input type="text" th:field="*{firstName}" id="firstName" class="form-input">
