--- a/src/main/resources/templates/order-list.html
+++ b/src/main/resources/templates/order-list.html
@@ -57,7 +57,7 @@
         </tr>
 
         </tbody>
-        <p th:text=" 'Total earnings for this date' + ${total} "><p/>
+        <p th:text=" ${total} "><p/>
     </table>
 
 </body>
